updated with team dashboard component

--- a/performance_and_feedback_web/src/app/app.component.html
+++ b/performance_and_feedback_web/src/app/app.component.html
@@ -2,5 +2,5 @@
 <toaster-container [toasterconfig]="config"></toaster-container>
 <app-authorized-header></app-authorized-header>
 <app-side-bar></app-side-bar>
-<app-appraiser-view></app-appraiser-view>
-
+<!-- <app-appraiser-view></app-appraiser-view> -->
+<app-dashboard></app-dashboard>
