prime-ng module updated with scrollPanel import

--- a/performance_and_feedback_web/src/app/app.component.html
+++ b/performance_and_feedback_web/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ng-progress></ng-progress>
 <toaster-container [toasterconfig]="config"></toaster-container>
-<app-authorized-header></app-authorized-header>
-<app-side-bar></app-side-bar>
-<!-- <app-appraiser-view></app-appraiser-view> -->
-<app-dashboard></app-dashboard>
+<div ui-view="header"></div>
+<div ui-view="nav"></div>
+<ui-view></ui-view>
+<div ui-view="footer"></div>
