--- a/performance_and_feedback_web/src/app/appraiser-view/self-development/self-development.component.html
+++ b/performance_and_feedback_web/src/app/appraiser-view/self-development/self-development.component.html
@@ -1,6 +1,7 @@
 <div id="main-block">
   <div class="container-fluid">
     <div class="main_block p-0 indicator_table">
+        <input class="form-control search" type="text">
       <table class="table table-bordered">
         <thead>
           <tr>
