--- a/performance_and_feedback_web/src/app/dashboard/team-performance/team-performance.component.html
+++ b/performance_and_feedback_web/src/app/dashboard/team-performance/team-performance.component.html
@@ -69,7 +69,7 @@
               </td>
               <td>
                 <label name="status">
-                  <a href="#">
+                  <a uiSref="app.authorized.appraiser-view">
                     {{data.status}}
                   </a>
                 </label>
