appraiser-view css commit

--- a/performance_and_feedback_web/src/app/appraiser-view/self-development/self-development.component.html
+++ b/performance_and_feedback_web/src/app/appraiser-view/self-development/self-development.component.html
@@ -1,6 +1,12 @@
 <div id="main-block">
   <div class="container-fluid">
     <div class="main_block p-0 indicator_table">
+      <div class="input-group col-sm-6 col-lg-6 p-0">
+        <div class="input-group-prepend">
+          <i class="fas fa-search"></i>
+        </div>
+        <input class="form-control search" type="text">
+      </div>
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -114,3 +120,5 @@
     </div>
   </div>
 </div>
+<a ui-sref="#/hello">Hello</a>
+<ui-view></ui-view>
