--- a/performance_and_feedback_web/src/app/appraiser-view/appraiser-view.component.html
+++ b/performance_and_feedback_web/src/app/appraiser-view/appraiser-view.component.html
@@ -1,25 +1,24 @@
-<div id="main-block">
-  <div class="container-fluid">
-    <div class="main_block p-0 indicator_table">
-      <div class="col-sm p-0">
-        <nav class="navbar navbar-inverse">
-          <p-tabView class="nav navbar-nav">
-            <p-tabPanel leftIcon="fas fa-cogs" header="Project Indicators" class="active">
-               <app-project-indicators></app-project-indicators>
-            </p-tabPanel>
-            <p-tabPanel leftIcon="fas fa-chart-bar" header="Self Development" class="active">
-                <app-self-development></app-self-development>
-            </p-tabPanel>
-            <p-tabPanel leftIcon="fas fa-sitemap" header="Organisational" class="active">
-                <app-organisational></app-organisational>
-            </p-tabPanel>
-            <div class="col-sm-12 buttons-row text-right p-0">
-              <button class="btn btn-default btn-sm" type="button">Cancel</button>
-              <button class="btn btn-success btn-sm mr-0" type="submit">Save</button>
-            </div>
-          </p-tabView>
-        </nav>
-      </div>
+
+<div class="container-fluid mt-5 ml-5">
+  <div class="main_block p-0 indicator_table mt-5 ml-5">
+    <div class="col-sm p-0 mt-4">
+      <nav class="navbar navbar-inverse">
+        <p-tabView class="nav navbar-nav">
+          <p-tabPanel leftIcon="fas fa-cogs" header="Project Indicators" class="active">
+              <app-project-indicators></app-project-indicators>
+          </p-tabPanel>
+          <p-tabPanel leftIcon="fas fa-chart-bar" header="Self Development" class="active">
+              <app-self-development></app-self-development>
+          </p-tabPanel>
+          <p-tabPanel leftIcon="fas fa-sitemap" header="Organisational" class="active">
+              <app-organisational></app-organisational>
+          </p-tabPanel>
+          <div class="col-sm-12 buttons-row text-right p-0">
+            <button class="btn btn-default btn-sm" type="button">Cancel</button>
+            <button class="btn btn-success btn-sm mr-0" type="submit">Save</button>
+          </div>
+        </p-tabView>
+      </nav>
     </div>
   </div>
 </div>
