--- a/performance_and_feedback_web/src/app/appraiser-view/appraiser-view.component.html
+++ b/performance_and_feedback_web/src/app/appraiser-view/appraiser-view.component.html
@@ -3,7 +3,7 @@
     <div class="main_block p-0 indicator_table table-responsive">
       <div class="col-sm p-0 mt-4">
           <nav class="navbar navbar-inverse">
-            <p-tabView class="nav navbar-nav">
+            <p-tabView class="nav navbar-nav indicator-table">
               <p-tabPanel leftIcon="fas fa-cogs" header="Project Indicators" class="active">
                   <app-project-indicators></app-project-indicators>
               </p-tabPanel>
