--- a/performance_and_feedback_web/src/app/appraiser-view/self-development/self-development.component.html
+++ b/performance_and_feedback_web/src/app/appraiser-view/self-development/self-development.component.html
@@ -2,7 +2,7 @@
   <div class="input-group-prepend">
     <i class="fas fa-search"></i>
   </div>
-  <input class="form-control search" type="text">
+  <input class="form-control search" placeholder="Search" type="text">
 </div>
 <table class="table table-bordered">
   <thead>
